[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/img_fundoChao.png" type="Texture" id=2]
[ext_resource path="res://scripts/ze-timber.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudoIdle.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudoBate.png" type="Texture" id=5]
[ext_resource path="res://assets/grave.png" type="Texture" id=6]
[ext_resource path="res://scripts/time-marker.gd" type="Script" id=7]
[ext_resource path="res://assets/barra_recipiente.png" type="Texture" id=8]
[ext_resource path="res://assets/barra.png" type="Texture" id=9]
[ext_resource path="res://assets/font140.fnt" type="BitmapFont" id=10]

[sub_resource type="Animation" id=1]

resource/name = "Hit"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Hitting:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="GameNode" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( -758.5, -33.47 )
transform/scale = Vector2( 2.028, 2.1017 )
texture = ExtResource( 2 )
centered = false

[node name="Camera" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="ZeTimber" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 220, 1070 )
z/z = 2
script/script = ExtResource( 3 )

[node name="Idle" type="Sprite" parent="ZeTimber"]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Hitting" type="Sprite" parent="ZeTimber"]

visibility/visible = false
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Grave" type="Sprite" parent="ZeTimber"]

visibility/visible = false
transform/pos = Vector2( -46, 40 )
transform/scale = Vector2( 0.2075, 0.1454 )
texture = ExtResource( 6 )
flip_h = true
modulate = Color( 0.345098, 0.698039, 0.172549, 1 )

[node name="Anim" type="AnimationPlayer" parent="ZeTimber"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Hit = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Barrels" type="Node2D" parent="."]

[node name="DestroyedBarrels" type="Node2D" parent="."]

[node name="TimeMarker" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 360, 100 )
transform/scale = Vector2( 2, 2 )
script/script = ExtResource( 7 )

[node name="Border" type="Sprite" parent="TimeMarker"]

texture = ExtResource( 8 )

[node name="Marker" type="Sprite" parent="TimeMarker"]

texture = ExtResource( 9 )
region = true
region_rect = Rect2( 0, 0, 188, 23 )

[node name="Score" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Label" type="Label" parent="Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 158.0
margin/right = 718.0
margin/bottom = 309.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 0.792157, 0.0627451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TimerRestartGame" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="TimerRestartGame" to="." method="_on_TimerRestartGame_timeout"]


